-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.0-beta1
-
Ubuntu 12.04 32bit, QC 3.5 beta snapshots based on Qt5.5
-
fc7ce7f0c8044c7f98262929fa75fa10169a845b f36e79cfa2bc75adba339220011b8ddd42ec2c9d
Steps to reproduce:
- start QC, make sure you're having no kit configured using Qt5.3+ (any Qt version below 5.3 should be fine to reproduce this issue)
- invoke 'File' -> 'New File or Project...' -> 'Application' -> 'Qt Quick Application'
- specify a valid project location
- on the Project Details page: leave minimal required Qt version to be unset
- click Next
Expected behaviour:
- if it's not possible to set a minimal required Qt version, the 'Next' button should be disabled
additionally I had this on the cmdline
"Error in \" .qtQuickVersion\": SyntaxError: Syntax error"
| For Gerrit Dashboard: QTCREATORBUG-14699 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 120971,4 | JsonFieldPage: Be more paranoid with the index of ComboBoxes | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |