JsonFieldPage: Be more paranoid with the index of ComboBoxes

This avoids a combobox being shown without any selection. This has
the side-effect that QTCREATORBUG-14699 can no longer get triggered.

Task-number: QTCREATORBUG-14699
Change-Id: I98f5ae503d29370ad46c6620238bc2815c024747
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>